<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.rapidoid</groupId>
	<artifactId>rapidoid</artifactId>
	<version>5.6.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Rapidoid</name>
	<url>http://www.rapidoid.org</url>
	<description>Full-stack web framework and high-performance network protocol framework</description>

	<organization>
		<name>Nikolche Mihajlovski and contributors</name>
		<url>http://www.nikolche.com</url>
	</organization>

	<inceptionYear>2014</inceptionYear>

	<developers>
		<developer>
			<name>Nikolche Mihajlovski</name>
			<email>nikolce.mihajlovski@gmail.com</email>
			<url>http://www.nikolche.com</url>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:git://github.com/rapidoid/rapidoid.git</connection>
		<developerConnection>scm:git:git@github.com:rapidoid/rapidoid.git</developerConnection>
		<url>https://github.com/rapidoid/rapidoid</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<test.jvm.argLine>-server -verbose:gc</test.jvm.argLine>
		<jdk9.modules />

		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm z</maven.build.timestamp.format>

		<jackson.version>2.8.5</jackson.version>
		<javassist.version>3.22.0-GA</javassist.version>

		<slf4j.version>1.7.21</slf4j.version>
		<logback.version>1.1.3</logback.version>

		<commons-logging.version>1.2</commons-logging.version>
		<httpclient.version>4.1</httpclient.version>
		<httpmime.version>4.5</httpmime.version>

		<hikari.version>2.6.1</hikari.version>
		<c3p0.version>0.9.5.2</c3p0.version>
		<hibernate.version>4.3.11.Final</hibernate.version>

		<validation-api.version>1.1.0.Final</validation-api.version>
		<validator.version>5.2.4.Final</validator.version>
		<el.version>2.2.5</el.version>

		<mysql-connector.version>5.1.41</mysql-connector.version>
		<h2.version>1.4.187</h2.version>
		<hsqldb.version>2.3.3</hsqldb.version>
		<postgresql.version>9.4.1211</postgresql.version>

		<spring.version>4.2.5.RELEASE</spring.version>
		<guice.version>4.1.0</guice.version>
		<oltu.version>1.0.1</oltu.version>
		<mustache.java.version>0.9.1</mustache.java.version>
		<jmustache.version>1.12</jmustache.version>

		<junit.version>4.12</junit.version>
		<mockito.version>1.8.5</mockito.version>

	</properties>

	<modules>
		<module>rapidoid-commons</module>
		<module>rapidoid-test-commons</module>
		<module>rapidoid-networking</module>
		<module>rapidoid-sql</module>
		<module>rapidoid-jpa</module>
		<module>rapidoid-inject</module>
		<module>rapidoid-render</module>
		<module>rapidoid-http-fast</module>
		<module>rapidoid-http-client</module>
		<module>rapidoid-http-server</module>
		<module>rapidoid-gui</module>
		<module>rapidoid-oauth</module>
		<module>rapidoid-integrate</module>
		<module>rapidoid-web</module>
		<module>rapidoid-quick</module>
		<module>rapidoid-watch</module>
		<module>rapidoid-integration-tests</module>
		<module>app-maven-plugin</module>
	</modules>

	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.6.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<compilerArgs>
						<arg>-parameters</arg>
						<arg>-XDignore.symbol.file</arg>
					</compilerArgs>
					<fork>true</fork>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>sonatype-nexus-snapshots</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.19.1</version>
				<configuration>
					<argLine>${jdk9.modules} -Xms512m -Xmx1024m -Dfile.encoding=${project.build.sourceEncoding}</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<goals>deploy</goals>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<tagNameFormat>@{project.version}</tagNameFormat>
					<scmCommentPrefix>[maven-release-plugin] [ci skip] </scmCommentPrefix>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<check />
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.asciidoctor</groupId>
				<artifactId>asciidoctor-maven-plugin</artifactId>
				<version>1.5.3</version>
				<inherited>false</inherited>
				<executions>
					<execution>
						<id>output-html</id>
						<phase>generate-resources</phase>
						<goals>
							<goal>process-asciidoc</goal>
						</goals>
						<configuration>
							<sourceDirectory>asciidoc</sourceDirectory>
							<headerFooter>true</headerFooter>
							<imagesDir>img</imagesDir>
							<sourceHighlighter>coderay</sourceHighlighter>
							<backend>html5</backend>
							<sourceDocumentName>index.adoc</sourceDocumentName>
							<attributes>
								<toc>left</toc>
								<linkcss>false</linkcss>
								<project-version>${project.version}</project-version>
								<sectnums>true</sectnums>
								<sectnumlevels>2</sectnumlevels>
							</attributes>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>1.13</version>
					<configuration>
						<licenseName>apache_v2</licenseName>
						<verbose>false</verbose>
						<canUpdateCopyright>true</canUpdateCopyright>
						<canUpdateDescription>true</canUpdateDescription>
						<addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
						<emptyLineAfterHeader>true</emptyLineAfterHeader>
						<includes>
							<include>**/*.java</include>
						</includes>
						<skipUpdateLicense>false</skipUpdateLicense>
					</configuration>
					<executions>
						<execution>
							<id>first</id>
							<goals>
								<goal>update-file-header</goal>
							</goals>
							<phase>process-sources</phase>
						</execution>
					</executions>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>jdk9</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<properties>
				<jdk9.modules>--add-modules java.xml.bind,java.xml.ws.annotation</jdk9.modules>
			</properties>
		</profile>

		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.4</version>
						<configuration>
							<failOnError>false</failOnError>
							<version>false</version>
							<author>false</author>
							<keywords>true</keywords>
							<breakiterator>false</breakiterator>
							<detectOfflineLinks>false</detectOfflineLinks>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.5</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
